--- a/php/TODO/index.html
+++ b/php/TODO/index.html
@@ -22,11 +22,74 @@
     <title>TODO</title>
   </head>
   <body>
-    <h1 class="text-center text-light m-3">TODO</h1>
+    <div class="header container">
+      <div class="row mt-5 m-3 justify-content-center">
+        <h2 class="text-light col-2 font-weight-bold">TODO</h2>
+        <form class="col-8 d-flex flex-row">
+          <input
+            class="form-control col-10 rounded"
+            type="search"
+            id="tsearch"
+            name="tsearch"
+          />
+          <button class="btn btn-primary ml-2" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
     <section id="Tasks">
       <div id="taskCard" class="card container px-4 overflow-auto"></div>
     </section>
     <section id="add-task" class="mt-5 px-5">
+      <div
+        class="modal fade"
+        id="exampleModal"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form onsubmit="event.preventDefault(); handleModalSubmit()">
+                <div class="form-group">
+                  <label for="modalTitle">Title</label>
+                  <input type="text" class="form-control" id="modalTitle" />
+                </div>
+                <div class="form-group">
+                  <label for="modalDescription">
+                    Description
+                    <small class="text-muted"> (optional) </small>
+                  </label>
+                  <textarea class="form-control" id="modalDescription">
+                  </textarea>
+                </div>
+                <input type="hidden" name="modalID" id="modalID" />
+                <div class="float-right">
+                  <button
+                    type="button"
+                    class="btn btn-secondary"
+                    data-dismiss="modal"
+                  >
+                    Cancel
+                  </button>
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="container">
         <form
           class="row border border-dark rounded-pill overflow-hidden"
@@ -48,6 +111,21 @@
         </form>
       </div>
     </section>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+      crossorigin="anonymous"
+    ></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
