--- a/php/TODO/index.html
+++ b/php/TODO/index.html
@@ -16,7 +16,7 @@
     ></script>
     <script>
       window.onload = function () {
-        loadTasks();
+        loadTask();
       };
     </script>
     <title>TODO</title>
@@ -25,13 +25,27 @@
     <div class="header container">
       <div class="row mt-5 m-3 justify-content-center">
         <h2 class="text-light col-2 font-weight-bold">TODO</h2>
-        <form class="col-8 d-flex flex-row">
-          <input
-            class="form-control col-10 rounded"
-            type="search"
-            id="tsearch"
-            name="tsearch"
-          />
+        <form
+          class="col-8 d-flex flex-row"
+          onsubmit="event.preventDefault(); searchNormal();"
+        >
+          <div class="autocomplete col-10 d-flex flex-row">
+            <input
+              class="form-control col-10 rounded"
+              type="search"
+              id="tsearch"
+              name="tsearch"
+            />
+            <div id="ck-button">
+              <label class="btn">
+                <input title="Only Favourites" type="checkbox" id="fav_checkbox" /><span class="p-2 btn-light fas fa-star rounded-circle"></span>  
+                </span>
+              </label>
+            </div>
+          </div>
+
+          <!-- <input type="checkbox  " name="priority" id="fltr_priority" /> -->
+
           <button class="btn btn-primary ml-2" type="submit">Search</button>
         </form>
       </div>
