--- a/php/TODO/index.html
+++ b/php/TODO/index.html
@@ -70,6 +70,11 @@
           </button>
         </form>
       </div>
+      <div
+        id="myAlert"
+        class="alert fade show alert-dismissible d-none"
+        role="alert"
+      ></div>
     </div>
     <section id="Tasks">
       <div id="taskCard" class="card container px-4 overflow-auto"></div>
